<!--CÓDIGO GENERADO POR HECTOR IVAN MORALES OVANDO-->

<resources>
    <string name="app_name">Mis Mascotas Frag D</string>
    <string name="tarea_name">Mis Mascotas Frag D</string>
    <string name="favoritos">5 Favoritos</string>
    <string name="btn_favoritos">5</string>
    <string name="pnombre">nombre</string>
    <string name="praza">raza</string>
    <string name="pfoto">email</string>
    <string name="prating">rating</string>

    <!--Menú de opciones-->
    <string name="menu_Contacto">Contacto</string>
    <string name="menu_AcercaDe">Acerca de</string>

    <!--Activity Contacto-->
    <string name="hint_EmailDestinatario">E-mail Destinatario</string>
    <string name="hint_Asunto">Asunto</string>
    <string name="hint_Mensaje">Mensaje</string>
    <string name="btn_siguiente">E N V I A R</string>

    <!--Activity Acerca de-->
    <string name="yoSoy">¡¡¡Hola!!! Yo soy</string>
    <string name="minombre">Hector Ivan Morales Ovando</string>
    <string name="misestudios">Hace algunos años estudié</string>
    <string name="micarrera">Ing. en Sistemas Computacionales</string>
    <string name="micorreoes">Mi correo es:</string>
    <string name="micorreo">himo123@hotmail.com</string>
    <string name="fecha">Fecha de publicación:</string>
    <string name="fechapublicacion">Marzo 2021</string>
    <string name="curso">Ahora estoy aprendiendo programación con Android, solo por gusto en la plataforma Coursera:</string>
    <string name="coursera">Desarrollo de Aplicaciones con Android</string>
    <string name="gustar">Espero que te agrede mi app</string>
</resources>
