<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvMascotas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:outlineAmbientShadowColor="@color/black"
    android:elevation="@dimen/actionBarElevation"
    android:layout_marginTop="@dimen/rvMascotasPadding"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/rvMascotasPadding">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pfoto"
            android:src="@drawable/dibujo_perro"/>

        <GridLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/actionBarElevation">

            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="@dimen/huesosTamaño"
                android:layout_height="@dimen/huesosTamaño"
                android:layout_columnWeight="0.1"
                android:layout_gravity="left"
                android:background="@drawable/icons8_hueso_blanco"/>

            <TextView
                android:id="@+id/tvNombreCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pnombre"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:layout_columnWeight="0.5"/>

            <TextView
                android:id="@+id/tvRatingCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prating"
                android:textSize="20sp"
                android:layout_gravity="right"
                android:layout_columnWeight="0.1"/>

            <ImageButton
                android:id="@+id/btnDorado"
                android:layout_width="@dimen/huesosTamaño"
                android:layout_height="@dimen/huesosTamaño"
                android:background="@drawable/icons8_hueso_dorado"
                android:layout_gravity="left"
                android:layout_columnWeight="0"/>

         </GridLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>